feat: restore localStorage for notification form and fix textarea height
- Save notification name and payload to localStorage on send
- Add 'Restore' button to reload last-used values from localStorage
- Auto-restore on page load (init)
- Fix textarea height: scroll height re-applied in showMenu after
  elements are made visible (was called while hidden → scrollHeight 0)

--- a/remote.html
+++ b/remote.html
@@ -239,6 +239,15 @@
               <span class="fa fa-fw fa-send-o" aria-hidden="true"></span>
               <span class="text">%%TRANSLATE:SEND_NOTIFICATION%%</span>
             </div>
+            <div
+              id="restore-notification-button"
+              class="button"
+              role="button"
+              tabindex="0"
+            >
+              <span class="fa fa-fw fa-history" aria-hidden="true"></span>
+              <span class="text">%%TRANSLATE:RESTORE%%</span>
+            </div>
           </nav>
           <!-- Links menu navigation -->
           <nav class="menu-nav menu-element hidden links-menu">
