feat: add API URL preview to notification menu
Shows the resulting API URL below the payload field so users can
copy it directly into curl, Streamdeck, or other tools.

- URL updates live as notification name and payload are typed
- Plain string payload: appended as path segment (GET)
- Flat JSON object: encoded as query parameters (GET)
- Nested JSON object: base URL shown with POST badge
- Method badge (GET/POST) indicates required HTTP method
- URL field uses word-break for readability on small screens
- Copy button copies URL to clipboard
- Updated FORM_NOTIFICATION_PAYLOAD label in all 14 languages
  to reflect that plain strings are also valid

--- a/remote.html
+++ b/remote.html
@@ -303,6 +303,25 @@
 }</textarea
                 >
               </div>
+              <div class="xsmall">%%TRANSLATE:FORM_NOTIFICATION_URL%%</div>
+              <div class="notification-url-row">
+                <span
+                  id="notification-url-method"
+                  class="notification-url-method"
+                ></span>
+                <div
+                  id="notification-url"
+                  class="medium notification-url-display"
+                ></div>
+                <div
+                  id="notification-url-copy"
+                  class="button"
+                  role="button"
+                  tabindex="0"
+                >
+                  <span class="fa fa-fw fa-copy" aria-hidden="true"></span>
+                </div>
+              </div>
             </form>
             <!-- alert form -->
             <form
