refactor: split remote.js into topic-focused files (Schritt 7)
- remote-utils.js: translate, hide/show, setStatus, createSymbolText, …
- remote-socket.js: socket, sendSocketNotification, socketNotificationReceived, get, …
- remote-modules.js: module visibility, install, update, classes
- remote-config.js: config editor (createObjectGUI, createConfigElement, …)
- remote-menu.js: navigation, dynamic menus, showMenu, loadOtherElements

Each topic file extends Remote via Object.assign(Remote, { … }).
remote.js reduced from 2455 to 422 lines (state properties only).

Fix: move auto-init (Remote.init()) to end of remote-menu.js so all
methods are merged before init runs (was causing
"Remote.sendSocketNotification is not a function").

Update remote.html load order, ESLint config globals, and test setup.

--- a/remote.html
+++ b/remote.html
@@ -684,5 +684,10 @@
     <script src="js/socketclient.js"></script>
     <script src="modules/MMM-Remote-Control/node_modules/marked/lib/marked.umd.js"></script>
     <script src="modules/MMM-Remote-Control/remote.js"></script>
+    <script src="modules/MMM-Remote-Control/remote-utils.js"></script>
+    <script src="modules/MMM-Remote-Control/remote-socket.js"></script>
+    <script src="modules/MMM-Remote-Control/remote-modules.js"></script>
+    <script src="modules/MMM-Remote-Control/remote-config.js"></script>
+    <script src="modules/MMM-Remote-Control/remote-menu.js"></script>
   </body>
 </html>
