--- a/remote.html
+++ b/remote.html
@@ -682,12 +682,12 @@
     <script src="%%CONFIG_PATH%%"></script>
     <script src="socket.io/socket.io.js"></script>
     <script src="js/socketclient.js"></script>
-    <script src="modules/MMM-Remote-Control/node_modules/marked/lib/marked.umd.js"></script>
-    <script src="modules/MMM-Remote-Control/remote.js"></script>
-    <script src="modules/MMM-Remote-Control/remote-utils.js"></script>
-    <script src="modules/MMM-Remote-Control/remote-socket.js"></script>
-    <script src="modules/MMM-Remote-Control/remote-modules.js"></script>
-    <script src="modules/MMM-Remote-Control/remote-config.js"></script>
-    <script src="modules/MMM-Remote-Control/remote-menu.js"></script>
+    <script type="importmap">
+      {"imports": {"marked": "/modules/MMM-Remote-Control/node_modules/marked/lib/marked.esm.js"}}
+    </script>
+    <script
+      type="module"
+      src="modules/MMM-Remote-Control/remote-menu.mjs"
+    ></script>
   </body>
 </html>
