fix: correct lazy-render regressions
- Add 'edit-menu' class to renderEditMenu section so CSS slider/row
  rules (.edit-menu .one-line, .edit-menu .slider-container) still match
- Skip recursive inline rendering of child items when type is 'menu';
  sub-menu contents are loaded lazily via findDynamicMenuData on navigation
- Stop adding pending dynamic menus to dynamicMenus eagerly; only
  pendingDynamicMenus is populated until injectDynamicMenuButtons runs,
  preventing duplicate buttons in main-menu
- Fix parent?.replaceChildren() optional chaining in remote-socket.mjs
  to avoid crash when result container is not in current menu DOM
- Update smoke test to match lazy-render behaviour (nested items not pre-rendered)

--- a/remote.html
+++ b/remote.html
@@ -40,7 +40,7 @@
         <header class="header">
           <div
             id="back-button"
-            class="menu-element hidden button power-menu edit-menu settings-menu add-module-menu update-menu classes-menu alert-menu notification-menu links-menu"
+            class="hidden button"
             role="button"
             aria-label="%%TRANSLATE:BACK%%"
             tabindex="0"
